src/test/deca/context/invalid/DoubleDeclFieldMethod.deca
class A{
 int x;
 void x(){
 }
}
